<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="time_format">dd/MMM/yyyy HH:mm:ss z</string>
    <string name="content">"Content: "</string>
    <string name="from">"From: "</string>
    <string name="to">"To: "</string>
    <string name="send_sms_head">Send SMS</string>
    <string name="system_message_head">[System information]</string>
    <string name="success_connect">Connected to the Telegram API Server.</string>
    <string name="connect_wait_title">Connecting to the Telegram API server…</string>
    <string name="connect_wait_message">Please wait…</string>
    <string name="select_chat">Select Chat</string>
    <string name="missed_call_head">Missed Call</string>
    <string name="Incoming_number">"Calling From: "</string>
    <string name="battery_low">Battery level is low.</string>
    <string name="charger_connect">Phone charger connected.</string>
    <string name="charger_disconnect">Phone charger disconnected.</string>
    <string name="bot_token">Bot Token</string>
    <string name="chat_id">Chat ID</string>
    <string name="trusted_phone_number">Trusted phone number</string>
    <string name="get_recent_chat_id">Get recent chat ID</string>
    <string name="test_and_save">Test and save</string>
    <string name="network_error_falls_back_to_sms">Resend using SMS when network error occurs</string>
    <string name="low_battery_status_end">Battery has been charged to a safe level.</string>
    <string name="logcat">View log</string>
    <string name="token_not_configure">Please configure the bot token first.</string>
    <string name="chat_id_or_token_not_config">Please configure the bot token and chat ID first.</string>
    <string name="unable_get_recent">Failed to get recent chat history</string>
    <string name="chat_command">Get chat command</string>
    <string name="unknown_command">Unknown command,type /help to get a list of available commands.</string>
    <string name="current_network_connection_status">"Network status: "</string>
    <string name="battery_monitoring">Monitor battery level change</string>
    <string name="trusted_phone_number_empty">Trusted phone number cannot be empty.</string>
    <string name="service_is_running">Service is running…</string>
    <string name="battery_monitoring_notify">"Battery monitor "</string>
    <string name="chat_command_service_name">"Chat command "</string>
    <string name="success">Success</string>
    <string name="receive_sms_head">Receive SMS</string>
    <string name="available_command">Available Commands:\n/getinfo - Get system information\n/log - Output the last 10 log records</string>
    <string name="restart_service">Background service has been restarted.</string>
    <string name="status">"Status: "</string>
    <string name="send_failed">Failed</string>
    <string name="airplane_mode">Device is in Airplane mode</string>
    <string name="no_network">No service</string>
    <string name="sendsms">/sendsms - Send SMS</string>
    <string name="sending">Sending</string>
    <string name="get_recent_chat_title">Please send some messages to the bot</string>
    <string name="get_recent_chat_message">The bot need your chat ID to know whom to forward…</string>
    <string name="using_doh">Using DNS over HTTPS</string>
    <string name="sim_card_insert">SIM card inserted.</string>
    <string name="sim_card_remove">SIM card removed.</string>
    <string name="sim_card_lock">SIM card locked.</string>
    <string name="no_logs">No logs yet.</string>
    <string name="using_verification_code_identification">Verification code automatic extraction (Alpha)</string>
    <string name="user_manual">User manual</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="enter_number">Please enter the number you want to send.</string>
    <string name="enter_content">Please enter the content of the message to be sent.</string>
    <string name="unable_get_phone_number">Unable to get phone number.</string>
    <string name="donate">Donate</string>
    <string name="current_battery_level">"Battery level: "</string>
    <string name="charging">Charging</string>
    <string name="not_charging">Not charging</string>
    <string name="charger_status">Monitor charger status</string>
    <string name="failed_to_get_information">Failed to get information.</string>
    <string name="scan_title">Scan QR code</string>
    <string name="using_privacy_mode">Respond only to commands containing the Bot username</string>
    <string name="error_message_head">"Error message: "</string>
    <string name="set_up_apps_that_need_to_listen_for_notifications">Set up apps that need to listen for notifications</string>
    <string name="app_list">App list</string>
    <string name="receive_notification_title">[Receive Notification]</string>
    <string name="app_name_title">"App: "</string>
    <string name="title">"Title: "</string>
    <string name="Notification_Listener_title">"Notification Listener "</string>
    <string name="error_stop_message">A fatal error has occurred, the program has stopped.</string>
    <string name="privacy_reminder_information">When you use Telegram SMS, you’re trusting us with your information. We are deeply aware the importance of privacy control and put our utmost effort to keep your personal data secure. You have full control over your privacy. Please refer to our privacy policy to understand your rights and better protect your privacy.</string>
    <string name="privacy_reminder_title">Privacy and terms</string>
    <string name="agree">Agree</string>
    <string name="decline">"I'll decide later"</string>
    <string name="visit_page">Visit the Privacy Terms page</string>
    <string name="failed_resend">"Failed message resend "</string>
    <string name="keywords">Keywords</string>
    <string name="time">"Time: "</string>
    <string name="spam_sms_keyword_title">SMS blacklist</string>
    <string name="spam_keyword_dialog_title">Please use \";\" to split keywords.</string>
    <string name="set_notification_listener">Notification listener</string>
    <string name="get_spam_sms">/getspamsms - Get filtered spam messages</string>
    <string name="spam_count_title">"Filtered spam: "</string>
    <string name="no_spam_history">No spam history</string>
</resources>
