<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_activity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="@dimen/alpha"
        android:scaleType="fitEnd"
        app:srcCompat="@drawable/character_set"
        tools:ignore="ContentDescription" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bot_token_editview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bot_token"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/chat_id_editview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/chat_id"
                    android:inputType="numberSigned"
                    android:maxLines="1"
                    android:singleLine="true"

                    tools:ignore="TextFields" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/trusted_phone_number_editview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trusted_phone_number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="TextFields" />
            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/fallback_sms_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:paddingLeft="3dp"
                android:text="@string/network_error_falls_back_to_sms"
                tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/battery_monitoring_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:paddingLeft="3dp"
                android:text="@string/battery_monitoring"
                tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/charger_status_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:paddingLeft="3dp"
                android:text="@string/charger_status"
                tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/chat_command_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:paddingLeft="3dp"
                android:text="@string/chat_command"
                tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/verification_code_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:paddingLeft="3dp"
                android:text="@string/using_verification_code_identification"
                tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/privacy_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:paddingLeft="3dp"
                android:text="@string/using_privacy_mode"
                tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/doh_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:paddingLeft="3dp"
                android:text="@string/using_doh"
                tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

            <Button
                android:id="@+id/get_id_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="@dimen/button_alpha"
                android:text="@string/get_recent_chat_id" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="@dimen/button_alpha"
                android:text="@string/test_and_save" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>